tests/run/errors/div_by_zero_err.anv
// @mode: run
// @expect: error
// @contains: zero

fn main() {
    let x = 1 / 0;
}
